# study-openssl

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  x_crypt_task.cpp  x_crypt_task.h  x_file_crypt.cpp  x_file_crypt.h  x_read_task.cpp  x_read_task.h  x_write_task.cpp  x_write_task.h  xio_stream.cpp  xio_stream.h
tests/: CMakeLists.txt  batch_file_decrypt_test.cpp  batch_file_encrypt_test.cpp  encrypt_test.cpp  file_decrypt_test.cpp  file_encrypt_test.cpp
tests/asset/in/: file1.txt  file2.txt  file3.txt
